[gd_scene load_steps=22 format=3 uid="uid://qu67hmaxbav2"]

[ext_resource type="Script" uid="uid://dmhu06q888eid" path="res://Scripts/Enemies/boss_leaf_rangergd.gd" id="1_rp1v2"]
[ext_resource type="Texture2D" uid="uid://do2y43sahiw4n" path="res://Assets/Enemies/Bosses/LeafArcher/Elementals_leaf_ranger_288x128_SpriteSheet.png" id="2_53hb3"]
[ext_resource type="PackedScene" uid="uid://d4hevihr6b52r" path="res://Scripts/ranger_arrow.tscn" id="2_e2qen"]
[ext_resource type="Script" uid="uid://dw27quar45c1f" path="res://Scripts/Components/HealthComponent.gd" id="3_dvwoo"]
[ext_resource type="Script" uid="uid://dlkg6c6p32cxl" path="res://Scripts/Components/HitboxComponent.gd" id="5_mh6ay"]
[ext_resource type="AudioStream" uid="uid://ed5f1gfuts1u" path="res://Assets/Audio/RangerHurt.wav" id="6_a7cih"]
[ext_resource type="AudioStream" uid="uid://b13pjkq70lqmx" path="res://Assets/Audio/BeamAttack.mp3" id="7_ngxx4"]
[ext_resource type="AudioStream" uid="uid://c3mqv4jmm3uvd" path="res://Assets/Audio/ArrowShoot.mp3" id="8_7klen"]
[ext_resource type="AudioStream" uid="uid://34xoti6iju6r" path="res://Assets/Audio/RangerDeath.wav" id="9_ywl7k"]

[sub_resource type="Animation" id="Animation_hk7ya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/BeamHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/MeleeHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Beam:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BeamAttack:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ygmcp"]
resource_name = "leaf_beam"
length = 1.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [286, 287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300, 301, 302]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/BeamHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BeamAttack:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l7ngi"]
resource_name = "leaf_bramble"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [154, 155, 156, 157, 158, 159, 160, 161, 162, 163]
}

[sub_resource type="Animation" id="Animation_v0nvm"]
resource_name = "leaf_death"
length = 1.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 368, 369, 370]
}

[sub_resource type="Animation" id="Animation_ale4r"]
resource_name = "leaf_hit"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [330, 331, 332, 333, 334, 335]
}

[sub_resource type="Animation" id="Animation_aovpa"]
resource_name = "leaf_idle"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_bi11b"]
resource_name = "leaf_melee_attack"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [220, 221, 222, 223, 224, 224, 228, 229]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/MeleeHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_c6mtc"]
resource_name = "leaf_ranged_attack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"SpawnBasicArrow"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qunsb"]
_data = {
&"RESET": SubResource("Animation_hk7ya"),
&"leaf_beam": SubResource("Animation_ygmcp"),
&"leaf_bramble": SubResource("Animation_l7ngi"),
&"leaf_death": SubResource("Animation_v0nvm"),
&"leaf_hit": SubResource("Animation_ale4r"),
&"leaf_idle": SubResource("Animation_aovpa"),
&"leaf_melee_attack": SubResource("Animation_bi11b"),
&"leaf_ranged_attack": SubResource("Animation_c6mtc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sj5gv"]
size = Vector2(25, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyts1"]
size = Vector2(141, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntm73"]
size = Vector2(30, 20)

[node name="boss_ranger" type="Node2D"]
scale = Vector2(-1, 1)
script = ExtResource("1_rp1v2")
BasicArrow = ExtResource("2_e2qen")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -63)
texture = ExtResource("2_53hb3")
hframes = 22
vframes = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qunsb")
}

[node name="BeamCD" type="Timer" parent="."]
wait_time = 5.0

[node name="BrambleCD" type="Timer" parent="."]
wait_time = 10.0

[node name="HitCD" type="Timer" parent="."]
wait_time = 3.0

[node name="Raycasts" type="Node2D" parent="."]

[node name="RCBeam" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(0, -27.5)
target_position = Vector2(145, 0)
collision_mask = 4

[node name="RCRanged" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(0, -33.5)
target_position = Vector2(180, 0)
collision_mask = 4

[node name="RCBramble" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(0, -10)
target_position = Vector2(50, 0)
collision_mask = 4

[node name="RCMelee" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(0, -33.5)
target_position = Vector2(58, 0)
collision_mask = 4

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.5, -22)
shape = SubResource("RectangleShape2D_sj5gv")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_dvwoo")
MAX_HEALTH = 6

[node name="ArrowSpawn" type="Marker2D" parent="."]
position = Vector2(33, -33.5)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(100, -50)
scale = Vector2(20, 5)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("5_mh6ay")

[node name="BeamHitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(74.5, -27.5)
shape = SubResource("RectangleShape2D_gyts1")
disabled = true

[node name="MeleeHitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(41, -33)
shape = SubResource("RectangleShape2D_ntm73")
disabled = true

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_a7cih")

[node name="Beam" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ngxx4")

[node name="Arrow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7klen")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ywl7k")

[node name="BeamAttack" type="AudioStreamPlayer2D" parent="."]
rotation = 3.14159
scale = Vector2(1, -1)
stream = ExtResource("7_ngxx4")
volume_db = -20.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="current_animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_current_animation_changed"]
[connection signal="timeout" from="BeamCD" to="." method="_on_beam_cd_timeout"]
[connection signal="timeout" from="BrambleCD" to="." method="_on_bramble_cd_timeout"]
[connection signal="timeout" from="HitCD" to="." method="_on_hit_cd_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
